<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="long_tap_to_open_recipe_off">Short tap on a recipe in the browser to open it.</string>
    <string name="long_tap_to_open_recipe_on">Long tap on a recipe in the browser to open it.</string>
    <string name="long_tap_to_open_recipe">Long Tap to Open Recipe</string>
    <string name="multiple_peppers_off">Only a single pepper will be used as a placeholder</string>
    <string name="multiple_peppers_on">A full range of peppers will be used for placeholders</string>
    <string name="multiple_peppers_summary">Show multiple peppers as placeholders</string>
    <string name="multiple_peppers">Multiple Peppers for placeholders</string>
    <string name="show_thumbnails_summary_off">Thumbnails will NOT be shown</string>
    <string name="show_thumbnails_summary_on">Thumbnails will be shown</string>
    <string name="show_thumbnails_summary">Should thumbnails be shown on the browse recipes screen.</string>
    <string name="show_thumbnails">Show Thumbnails</string>
    <string name="menu_refresh_short">Refresh</string>
    <string name="menu_refresh">Refresh Recipes List</string>
    <string name="add_filter_title">Add Filter</string>
    <string name="add_filter_help">Tap to add filter</string>
    <string name="active_filters_heading">Filters &amp; Sorting</string>
	<string name="recipes_heading">Recipes</string>
    <string name="menu_prefs_short">Prefs</string>
    <string name="menu_prefs">Preferences</string>
    <string name="menu_showactive_short">Active Recipes</string>
    <string name="menu_showactive">View Active Recipes</string>
    <string name="menu_credits_short">Credits</string>
    <string name="menu_credits">View Credits</string>
    <string name="menu_end_recipe_short">End</string>
    <string name="menu_end_recipe">End This Recipe</string>
    <string name="menu_share_recipe_short">Share</string>
    <string name="menu_share_recipe">Share This Recipe</string>
    <string name="menu_share_recipe_link_short">Share Link</string>
    <string name="menu_share_recipe_link">Share Recipe Link</string>
    <string name="menu_share_recipe_card_short">Share Card</string>
    <string name="menu_share_recipe_card">Share Recipe Card</string>
    <string name="recipes_url_password_summary">The password to access the recipes database (if required).</string>
    <string name="recipes_url_password">Password</string>
    <string name="recipes_url_username_summary">The username to access the recipes database (if required).</string>
    <string name="recipes_url_username">Username</string>
    <string name="recipes_url_summary">The URL that the recipe database can be found at.</string>
    <string name="recipes_url">Recipes URL</string>
    <string name="show_recipes">&lt;&lt; Recipes</string>
    <string name="show_filters">Filters &gt;&gt;</string>
    <string name="hello">Hello World, RecipeBrowser!</string>
    <string name="app_name">Kitchen Recipes</string>
</resources>
